--- a/manifest.json
+++ b/manifest.json
@@ -1,39 +1,36 @@
-{
-
+{ 
   "manifest_version": 2,
-  "name": "Freebitcoin Auto-roll",
-  "version": "1.1.2",
-
-  "description": "Auto-roll for freebitco.in",
-
-  "permissions": ["tabs"],
+  "name": "Freebitco.in Automated",
+  "version": "1.5",
+  "description": "Automatically clicks 'Roll' to claim your hourly satoshi + claims RP bonus if able",
 
   "applications": {
     "gecko": {
-      "id": "lincolncpp@gmail.com"
+      "id": "nickisghosty@gmail.com"
     }
   },
 
   "icons": {
-	  "64": "icons/bitcoin-logo.png"
-	},
-
-  "browser_action": {
-	  "default_icon": "icons/bitcoin-logo.png",
-	  "default_title": "Freebitcoin Auto-roll",
-	  "default_popup": "popup/popup.html",
-	  "browser_style": true
-	},
-
-  "background": {
-    "scripts": ["background.js"]
+    "64": "icons/bitcoin-logo.png"
   },
 
-  "content_scripts": [
-    {
-      "matches": ["*://*.freebitco.in/*"],
-      "js": ["main.js"]
-    }
-  ]
+  "browser_action": {
+    "default_icon": "icons/bitcoin-logo.png",
+    "default_title": "Freebitco.in Automated - NickisGhosty",
+    "default_popup": "popup/popup.html",
+    "browser_style": true
+  },
 
+  "background": {
+    "scripts": ["backgroundscript.js"]
+  },
+  
+  "content_scripts": [ 
+    { 
+      "matches": ["*://freebitco.in/*"],
+      "js": ["contentscript.js"]
+    } 
+  ],
+
+  "permissions": ["tabs"]
 }
